--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/leaflet-routing-machine": "^3.2.8",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.0",
     "imagekitio-next": "^1.0.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
